# vs-preview

./: .flake8  .gitattributes  .gitignore  .pycodestyle  .pylintrc  Comp Stuff.py  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  setup.cfg  setup.py  todos
.github/: dependabot.yml
.github/actions/setup-vapoursynth/: action.yml
.github/workflows/: autotag.yml  docs.yml  lint.yml  pypipublish.yml  test-vapoursynth.yml
docs/: conf.py  index.rst  requirements.txt  save_frame_placeholders.md  shortcuts.md  vim_install.md  vscode_install.md
docs/accessibility/: keybinds.rst  placeholders.rst
docs/changelogs/: changelogs.rst
docs/installation/: install_notepad++.rst  install_vim.rst  install_vscode.rst  install_vspreview.rst
docs/toolbars/: main.rst  playback.rst  scening.rst
stubs/: cueparser.pyi  pretty_traceback.pyi  psutil.pyi  pysubs2.pyi  vapoursynth.pyi  yaml.pyi
stubs/requests/: __init__.pyi  models.pyi  sessions.pyi
stubs/requests_toolbelt/: __init__.pyi
stubs/requests_toolbelt/multipart/: __init__.pyi  encoder.pyi
vspreview/: __init__.py  __main__.py  _metadata.py  init.py  main.py  qt_patch.py
vspreview/api/: __init__.py  app.py  info.py  nodes.py  other.py  output.py  timecodes.py
vspreview/core/: __init__.py  abstracts.py  bases.py  better_abc.py  logger.py  types.py  vsenv.py
vspreview/core/custom/: __init__.py  combobox.py  dragnavigator.py  edits.py  graphicsview.py  misc.py  notch.py  plotting.py
vspreview/core/types/: __init__.py  audio.py  dataclasses.py  enums.py  misc.py  scene.py  units.py  video.py  yaml.py
vspreview/main/: __init__.py  dialog.py  settings.py  timeline.py  window.py
vspreview/models/: __init__.py  generalmodel.py  outputs.py  picture_types.py  scening.py  viewmodes.py  zoom_levels.py
vspreview/plugins/: __init__.py  abstract.py  frame_props.ppy  frame_props.py  freq_dft_view.ppy  install.py  split_view.ppy  utils.py  vssource_load.ppy
vspreview/plugins/builtins/: frame_props.ppy  slowpics_comp.ppy  split_view.ppy  vssource_load.ppy
vspreview/plugins/builtins/frame_props/: category.py  exclude.py  lut.py
vspreview/plugins/builtins/slowpics_comp/: __init__.py  history.py  main.py  settings.py  utils.py  workers.py
vspreview/shortcuts/: __init__.py  abstract.py  settings.py
vspreview/toolbars/: __init__.py  benchmark.py  debug.py  misc.py  pipette.py  playback.py  scening.py
vspreview/toolbars/benchmark/: __init__.py  settings.py  toolbar.py
vspreview/toolbars/comp/: settings.py  toolbar.py
vspreview/toolbars/debug/: settings.py  toolbar.py
vspreview/toolbars/main/: __init__.py  dialog.py  toolbar.py
vspreview/toolbars/misc/: settings.py  toolbar.py
vspreview/toolbars/pipette/: __init__.py  colorview.py  settings.py  toolbar.py
vspreview/toolbars/playback/: settings.py  toolbar.py
vspreview/toolbars/scening/: __init__.py  dialog.py  import_files.py  settings.py  toolbar.py
vspreview/utils/: __init__.py  debug.py  utils.py
vspreview/widgets/: __init__.py  colorview.py  timeline.py
vspreview/widgets/custom/: __init__.py  combobox.py  edits.py  graphicsview.py  misc.py
