[project]
name = "vspreview"
dynamic = ["version"]
description = "VapourSynth Preview Tool"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    {name = "Endilll"}
]
maintainers = [
    {name = "Setsugen no ao", email = "setsugen@setsugen.dev"},
    {name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com"}
]
classifiers = [
    "Topic :: Multimedia :: Graphics",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "VapourSynth>=69",
    # TODO: Bump to 1.0.0 when it's released
    "vsjetpack @ git+https://github.com/Jaded-Encoding-Thaumaturgy/vs-jetpack.git",
    "vsengine>=0.2.0",
    "PyQt6~=6.10.0",
    "PyQt6-sip~=13.10.0",
    "QDarkStyle>=3.2.3",
    "PyYAML~=6.0.2",
    "matplotlib>=3.10.3",
    "requests>=2.32.0",
    "requests-toolbelt>=1.0.0",
    "numpy>=2.3.1",
    "pywin32>=307; platform_system == 'Windows'",
    "Pillow>=11.3.0; platform_system == 'Windows'"
]

[project.urls]
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-preview"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[project.scripts]
vspreview = "vspreview.init:main"

[dependency-groups]
dev = [
    "mypy>=1.18.0",
    "ruff>=0.14.0",
    "twine>=6.1.0",
    "types-pillow>=10.2.0.20240822",
    "types-psutil>=7.0.0.20250401",
    "types-pyyaml>=6.0.12.20250516",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["vspreview"]
include = ["vspreview/py.typed"]
exclude = ["docs", "stubs"]

[tool.hatch.build.targets.sdist]
include = ["/vspreview"]

[tool.hatch.version]
path = "vspreview/_metadata.py"

# TODO: Remove when vs-jetpack 1.0.0 is released
[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
ignore_missing_imports = false

disallow_any_generics = true

disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

no_implicit_optional = true
strict_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

ignore_errors = false

allow_untyped_globals = false
allow_redefinition = false
implicit_reexport = false
strict_equality = true

show_error_context = false
show_column_numbers = true
show_error_codes = true
color_output = true
error_summary = true
pretty = true
