[project]
name = "vspreview"
dynamic = ["version"]
description = "VapourSynth Preview Tool"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
authors = [
    {name = "Endilll"}
]
maintainers = [
    {name = "Setsugen no ao", email = "setsugen@setsugen.dev"},
    {name = "Jaded Encoding Thaumaturgy", email = "jaded.encoding.thaumaturgy@gmail.com"}
]
classifiers = [
    "Topic :: Multimedia :: Graphics",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "VapourSynth>=69",
    "vsjetpack>=1.0.0",
    "vsengine>=0.2.0",
    "PyQt6~=6.10.0",
    "PyQt6-sip~=13.10.0",
    "QDarkStyle>=3.2.3",
    "PyYAML~=6.0.2",
    "matplotlib>=3.10.3",
    "requests>=2.32.0",
    "requests-toolbelt>=1.0.0",
    "numpy>=2.0.0",
    "pywin32>=307; platform_system == 'Windows'",
    "Pillow>=11.3.0; platform_system == 'Windows'"
]

[project.urls]
"Source Code" = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-preview"
"Contact" = "https://discord.gg/XTpc6Fa9eB"

[project.scripts]
vspreview = "vspreview.init:main"

[dependency-groups]
dev = [
    "mypy>=1.18.0",
    "ruff>=0.14.0",
    "twine>=6.1.0",
    "types-pillow>=10.2.0.20240822",
    "types-psutil>=7.0.0.20250401",
    "types-pyyaml>=6.0.12.20250516",
]

[build-system]
requires = ["hatchling>=1.27.0", "versioningit"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "versioningit"
default-version = "0.0.0+unknown"
next-version = "minor-release"
write = { file = "vspreview/_version.py", template = "__version__ = \"{normalized_version}\"\n__version_tuple__ = {version_tuple}" }

[tool.hatch.version.format]
distance = "{next_version}.dev{distance}+{vcs}{rev}"
dirty = "{next_version}+dirty"
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.dirty"

[tool.hatch.build]
artifacts = ["vspreview/_version.py"]

[tool.hatch.build.targets.sdist]
include = ["vspreview", "docs"]

[tool.hatch.build.targets.wheel]
packages = ["vspreview"]

# [tool.uv.sources]
# vsjetpack = { git = "https://github.com/Jaded-Encoding-Thaumaturgy/vs-jetpack", branch = "main" }
